freest/test/prog/Valid/Functional/MultPrecedence/MultPrecedence.fst
module MultPrecedence where

precedence : Int
precedence = 2 + 3 * 4 + 5

main : ()
main = print precedence
