freest/test/prog/Invalid/Parsing/PrefixTupleTypeCons/PrefixTupleTypeCons.fst
module PrefixTupleTypeCons where

foo : (,) Int Int
foo = (0, 0)
